src/aluParser.py
# Generated from alu.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class aluParser ( Parser ):

    grammarFileName = "alu.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'stateless'", "'stateful'", "'type'", 
                     "':'", "'state'", "'variables'", "'{'", "'}'", "','", 
                     "'hole'", "'packet'", "'fields'", "'('", "')'", "'='", 
                     "';'", "'int '", "'bit '", "'+'", "'-'", "'*'", "'/'", 
                     "<INVALID>", "<INVALID>", "'rel_op'", "'bool_op'", 
                     "'arith_op'", "'compute_alu'", "'Mux5'", "'Mux4'", 
                     "'Mux3'", "'Mux2'", "'Opt'", "'C()'", "'True'", "'if'", 
                     "'else'", "'elif'", "'return'", "'=='", "'>'", "'<'", 
                     "'>='", "'<='", "'!='", "'||'", "'&&'", "'!'", "'?'", 
                     "'assert(false);'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WS", "LINE_COMMENT", 
                      "RELOP", "BOOLOP", "ARITHOP", "COMPUTEALU", "MUX5", 
                      "MUX4", "MUX3", "MUX2", "OPT", "CONSTANT", "TRUE", 
                      "IF", "ELSE", "ELIF", "RETURN", "EQUAL", "GREATER", 
                      "LESS", "GREATER_OR_EQUAL", "LESS_OR_EQUAL", "NOT_EQUAL", 
                      "OR", "AND", "NOT", "QUESTION", "ASSERT_FALSE", "ID", 
                      "NUM" ]

    RULE_state_var = 0
    RULE_temp_var = 1
    RULE_packet_field = 2
    RULE_hole_var = 3
    RULE_stateless = 4
    RULE_stateful = 5
    RULE_state_indicator = 6
    RULE_state_var_def = 7
    RULE_state_var_seq = 8
    RULE_state_vars = 9
    RULE_hole_def = 10
    RULE_hole_seq = 11
    RULE_hole_vars = 12
    RULE_packet_field_def = 13
    RULE_packet_field_seq = 14
    RULE_packet_fields = 15
    RULE_alu_body = 16
    RULE_condition_block = 17
    RULE_statement = 18
    RULE_return_statement = 19
    RULE_variable = 20
    RULE_expr = 21
    RULE_alu = 22

    ruleNames =  [ "state_var", "temp_var", "packet_field", "hole_var", 
                   "stateless", "stateful", "state_indicator", "state_var_def", 
                   "state_var_seq", "state_vars", "hole_def", "hole_seq", 
                   "hole_vars", "packet_field_def", "packet_field_seq", 
                   "packet_fields", "alu_body", "condition_block", "statement", 
                   "return_statement", "variable", "expr", "alu" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    WS=23
    LINE_COMMENT=24
    RELOP=25
    BOOLOP=26
    ARITHOP=27
    COMPUTEALU=28
    MUX5=29
    MUX4=30
    MUX3=31
    MUX2=32
    OPT=33
    CONSTANT=34
    TRUE=35
    IF=36
    ELSE=37
    ELIF=38
    RETURN=39
    EQUAL=40
    GREATER=41
    LESS=42
    GREATER_OR_EQUAL=43
    LESS_OR_EQUAL=44
    NOT_EQUAL=45
    OR=46
    AND=47
    NOT=48
    QUESTION=49
    ASSERT_FALSE=50
    ID=51
    NUM=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class State_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(aluParser.ID, 0)

        def getRuleIndex(self):
            return aluParser.RULE_state_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_var" ):
                listener.enterState_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_var" ):
                listener.exitState_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_var" ):
                return visitor.visitState_var(self)
            else:
                return visitor.visitChildren(self)




    def state_var(self):

        localctx = aluParser.State_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_state_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(aluParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Temp_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(aluParser.ID, 0)

        def getRuleIndex(self):
            return aluParser.RULE_temp_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemp_var" ):
                listener.enterTemp_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemp_var" ):
                listener.exitTemp_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemp_var" ):
                return visitor.visitTemp_var(self)
            else:
                return visitor.visitChildren(self)




    def temp_var(self):

        localctx = aluParser.Temp_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_temp_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(aluParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Packet_fieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(aluParser.ID, 0)

        def getRuleIndex(self):
            return aluParser.RULE_packet_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPacket_field" ):
                listener.enterPacket_field(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPacket_field" ):
                listener.exitPacket_field(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPacket_field" ):
                return visitor.visitPacket_field(self)
            else:
                return visitor.visitChildren(self)




    def packet_field(self):

        localctx = aluParser.Packet_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_packet_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(aluParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Hole_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(aluParser.ID, 0)

        def getRuleIndex(self):
            return aluParser.RULE_hole_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHole_var" ):
                listener.enterHole_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHole_var" ):
                listener.exitHole_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHole_var" ):
                return visitor.visitHole_var(self)
            else:
                return visitor.visitChildren(self)




    def hole_var(self):

        localctx = aluParser.Hole_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_hole_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(aluParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatelessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return aluParser.RULE_stateless

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateless" ):
                listener.enterStateless(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateless" ):
                listener.exitStateless(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateless" ):
                return visitor.visitStateless(self)
            else:
                return visitor.visitChildren(self)




    def stateless(self):

        localctx = aluParser.StatelessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stateless)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(aluParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatefulContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return aluParser.RULE_stateful

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateful" ):
                listener.enterStateful(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateful" ):
                listener.exitStateful(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateful" ):
                return visitor.visitStateful(self)
            else:
                return visitor.visitChildren(self)




    def stateful(self):

        localctx = aluParser.StatefulContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stateful)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(aluParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_indicatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stateless(self):
            return self.getTypedRuleContext(aluParser.StatelessContext,0)


        def stateful(self):
            return self.getTypedRuleContext(aluParser.StatefulContext,0)


        def getRuleIndex(self):
            return aluParser.RULE_state_indicator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_indicator" ):
                listener.enterState_indicator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_indicator" ):
                listener.exitState_indicator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_indicator" ):
                return visitor.visitState_indicator(self)
            else:
                return visitor.visitChildren(self)




    def state_indicator(self):

        localctx = aluParser.State_indicatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_state_indicator)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(aluParser.T__2)
                self.state = 59
                self.match(aluParser.T__3)
                self.state = 60
                self.stateless()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(aluParser.T__2)
                self.state = 62
                self.match(aluParser.T__3)
                self.state = 63
                self.stateful()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_var_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def state_var_seq(self):
            return self.getTypedRuleContext(aluParser.State_var_seqContext,0)


        def getRuleIndex(self):
            return aluParser.RULE_state_var_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_var_def" ):
                listener.enterState_var_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_var_def" ):
                listener.exitState_var_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_var_def" ):
                return visitor.visitState_var_def(self)
            else:
                return visitor.visitChildren(self)




    def state_var_def(self):

        localctx = aluParser.State_var_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_state_var_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(aluParser.T__4)
            self.state = 67
            self.match(aluParser.T__5)
            self.state = 68
            self.match(aluParser.T__3)
            self.state = 69
            self.match(aluParser.T__6)
            self.state = 70
            self.state_var_seq()
            self.state = 71
            self.match(aluParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_var_seqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def state_vars(self):
            return self.getTypedRuleContext(aluParser.State_varsContext,0)


        def getRuleIndex(self):
            return aluParser.RULE_state_var_seq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_var_seq" ):
                listener.enterState_var_seq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_var_seq" ):
                listener.exitState_var_seq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_var_seq" ):
                return visitor.visitState_var_seq(self)
            else:
                return visitor.visitChildren(self)




    def state_var_seq(self):

        localctx = aluParser.State_var_seqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_state_var_seq)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [aluParser.T__7]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [aluParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.state_vars()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return aluParser.RULE_state_vars

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MultipleStateVarsContext(State_varsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a aluParser.State_varsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def state_var(self):
            return self.getTypedRuleContext(aluParser.State_varContext,0)

        def state_vars(self):
            return self.getTypedRuleContext(aluParser.State_varsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultipleStateVars" ):
                listener.enterMultipleStateVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultipleStateVars" ):
                listener.exitMultipleStateVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultipleStateVars" ):
                return visitor.visitMultipleStateVars(self)
            else:
                return visitor.visitChildren(self)


    class SingleStateVarContext(State_varsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a aluParser.State_varsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def state_var(self):
            return self.getTypedRuleContext(aluParser.State_varContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleStateVar" ):
                listener.enterSingleStateVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleStateVar" ):
                listener.exitSingleStateVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleStateVar" ):
                return visitor.visitSingleStateVar(self)
            else:
                return visitor.visitChildren(self)



    def state_vars(self):

        localctx = aluParser.State_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_state_vars)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = aluParser.SingleStateVarContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.state_var()
                pass

            elif la_ == 2:
                localctx = aluParser.MultipleStateVarsContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.state_var()
                self.state = 79
                self.match(aluParser.T__8)
                self.state = 80
                self.state_vars()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Hole_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hole_seq(self):
            return self.getTypedRuleContext(aluParser.Hole_seqContext,0)


        def getRuleIndex(self):
            return aluParser.RULE_hole_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHole_def" ):
                listener.enterHole_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHole_def" ):
                listener.exitHole_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHole_def" ):
                return visitor.visitHole_def(self)
            else:
                return visitor.visitChildren(self)




    def hole_def(self):

        localctx = aluParser.Hole_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_hole_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(aluParser.T__9)
            self.state = 85
            self.match(aluParser.T__5)
            self.state = 86
            self.match(aluParser.T__3)
            self.state = 87
            self.match(aluParser.T__6)
            self.state = 88
            self.hole_seq()
            self.state = 89
            self.match(aluParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Hole_seqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hole_vars(self):
            return self.getTypedRuleContext(aluParser.Hole_varsContext,0)


        def getRuleIndex(self):
            return aluParser.RULE_hole_seq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHole_seq" ):
                listener.enterHole_seq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHole_seq" ):
                listener.exitHole_seq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHole_seq" ):
                return visitor.visitHole_seq(self)
            else:
                return visitor.visitChildren(self)




    def hole_seq(self):

        localctx = aluParser.Hole_seqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_hole_seq)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [aluParser.T__7]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [aluParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.hole_vars()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Hole_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return aluParser.RULE_hole_vars

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SingleHoleVarContext(Hole_varsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a aluParser.Hole_varsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def hole_var(self):
            return self.getTypedRuleContext(aluParser.Hole_varContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleHoleVar" ):
                listener.enterSingleHoleVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleHoleVar" ):
                listener.exitSingleHoleVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleHoleVar" ):
                return visitor.visitSingleHoleVar(self)
            else:
                return visitor.visitChildren(self)


    class MultipleHoleVarsContext(Hole_varsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a aluParser.Hole_varsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def hole_var(self):
            return self.getTypedRuleContext(aluParser.Hole_varContext,0)

        def hole_vars(self):
            return self.getTypedRuleContext(aluParser.Hole_varsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultipleHoleVars" ):
                listener.enterMultipleHoleVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultipleHoleVars" ):
                listener.exitMultipleHoleVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultipleHoleVars" ):
                return visitor.visitMultipleHoleVars(self)
            else:
                return visitor.visitChildren(self)



    def hole_vars(self):

        localctx = aluParser.Hole_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_hole_vars)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = aluParser.SingleHoleVarContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.hole_var()
                pass

            elif la_ == 2:
                localctx = aluParser.MultipleHoleVarsContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.hole_var()
                self.state = 97
                self.match(aluParser.T__8)
                self.state = 98
                self.hole_vars()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Packet_field_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def packet_field_seq(self):
            return self.getTypedRuleContext(aluParser.Packet_field_seqContext,0)


        def getRuleIndex(self):
            return aluParser.RULE_packet_field_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPacket_field_def" ):
                listener.enterPacket_field_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPacket_field_def" ):
                listener.exitPacket_field_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPacket_field_def" ):
                return visitor.visitPacket_field_def(self)
            else:
                return visitor.visitChildren(self)




    def packet_field_def(self):

        localctx = aluParser.Packet_field_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_packet_field_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(aluParser.T__10)
            self.state = 103
            self.match(aluParser.T__11)
            self.state = 104
            self.match(aluParser.T__3)
            self.state = 105
            self.match(aluParser.T__6)
            self.state = 106
            self.packet_field_seq()
            self.state = 107
            self.match(aluParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Packet_field_seqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def packet_fields(self):
            return self.getTypedRuleContext(aluParser.Packet_fieldsContext,0)


        def getRuleIndex(self):
            return aluParser.RULE_packet_field_seq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPacket_field_seq" ):
                listener.enterPacket_field_seq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPacket_field_seq" ):
                listener.exitPacket_field_seq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPacket_field_seq" ):
                return visitor.visitPacket_field_seq(self)
            else:
                return visitor.visitChildren(self)




    def packet_field_seq(self):

        localctx = aluParser.Packet_field_seqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_packet_field_seq)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [aluParser.T__7]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [aluParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.packet_fields()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

